--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -2,10 +2,34 @@ body {
   font-size: 0.975rem;
 }
 
-.spread {
+.noscroll {
+  overflow: hidden;
+}
+
+.full {
   width: 100%;
   height: 100vh;
-  position: relative;
+}
+
+.spread {
+  z-index: 1;
+}
+
+.over-spread {
+  z-index: 2;
+}
+
+.bg-dark {
+  background-color: #000000;
+  background-color: rgba(0, 0, 0, .85);
+}
+
+.transition-filter {
+  transition: 200ms filter linear;
+}
+
+.blur {
+  filter: blur(1px);
 }
 
 .image-canvas {
