--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -1,10 +1,10 @@
 body {
-  font-size: 0.975rem;
+  font-size: 1rem;
 }
 
 .spread {
-  width: 100%;
   height: 100vh;
+  width: 100%;
   position: relative;
 }
 
@@ -15,15 +15,26 @@ body {
 }
 
 /* left-aligned image credit */
-.image-credit {
-  color: white;
+.image-credit-wrapper {
   background-color: black;
+  color: white;
 
-  position: absolute;
   bottom: 0;
   left: 0;
 
-  padding: 0.5rem;
-  border-top-right-radius: 0.5rem;
   opacity: 0.8;
+  position: absolute;
+
+  text-align: center;
+  width: 100%;
+
+  @include medium-up {
+    border-top-right-radius: 0.5rem;
+    text-align: left;
+    width: auto;
+  }
+}
+
+.image-credit {
+  padding: 0.5rem;
 }
