--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -1,11 +1,11 @@
 body {
+  font-family: helvetica;
   font-size: 1rem;
 }
 
-.spread {
-  height: 100vh;
-  width: 100%;
-  position: relative;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .noscroll {
@@ -18,16 +18,27 @@ body {
 }
 
 .spread {
+  height: 100vh;
+  width: 100%;
+  position: relative;
   z-index: 1;
 }
 
-.over-spread {
+.over-spread,
+.over-spread > * {
   z-index: 2;
 }
 
 .bg-dark {
+  color: #EEEEEE;
   background-color: #000000;
-  background-color: rgba(0, 0, 0, .85);
+  background-color: rgba(0, 0, 0, .8);
+}
+
+.bg-light {
+  color: #111111;
+  background-color: #FFFFFF;
+  background-color: rgba(255, 255, 255, .8);
 }
 
 .transition-filter {
@@ -35,36 +46,5 @@ body {
 }
 
 .blur {
-  filter: blur(5px);
-}
-
-.image-canvas {
- // These styles are hardcoded in the HTML <head>.
- // background: url("canvas.jpg") no-repeat center center fixed;
- // background-size: cover;
-}
-
-/* left-aligned image credit */
-.image-credit-wrapper {
-  background-color: black;
-  color: white;
-
-  bottom: 0;
-  left: 0;
-
-  opacity: 0.8;
-  position: absolute;
-
-  text-align: center;
-  width: 100%;
-
-  @include medium-up {
-    border-top-right-radius: 0.5rem;
-    text-align: left;
-    width: auto;
-  }
-}
-
-.image-credit {
-  padding: 0.5rem;
+  @include filter(blur, 5px);
 }
