--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -8,6 +8,16 @@ a {
   text-decoration: none;
 }
 
+.clearfix {
+  &:after {
+    content: "";
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
+  }
+}
+
 .noscroll {
   overflow: hidden;
 }
