Make text larger on retina screens

--- a/app/sass/nav.scss
+++ b/app/sass/nav.scss
@@ -16,9 +16,9 @@
 
 .nav-item {
   display: inline-block;
-  font-size: 1.75rem;
+  font-size: 1.75em;
   font-weight: bold;
-  padding: 0.135rem;
+  padding: 0.135em;
 }
 
 .nav-word {
