Include a basic return-to-home link

--- a/app/sass/nav.scss
+++ b/app/sass/nav.scss
@@ -23,9 +23,25 @@
   float: left;
 }
 
+.header-nav-item,
 .nav-item-hover {
   transition: background-color 0.2s ease-in-out;
   &:hover {
     background-color: red;
   }
+}
+
+.header-nav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: no-wrap;
+  width: 100%;
+}
+
+.header-nav-items {
+  margin: 1em;
+}
+
+.header-nav-item {
+  font-weight: bold;
 }
