--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -76,6 +76,14 @@ a {
   height: 100vh;
 }
 
+.home {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
 .spread {
   height: 100vh;
   width: 100%;
