--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -65,7 +65,7 @@ a {
 }
 
 .section-title {
-  @include small-title;
+  @include med-title;
 }
 
 .section-img {
@@ -117,6 +117,10 @@ a {
 
 .transition-filter {
   transition: 600ms filter linear;
+}
+
+.transition {
+  transition: all 0.2s ease-in-out;
 }
 
 .blur {
