Parameterize display font choice

--- a/app/sass/utils.scss
+++ b/app/sass/utils.scss
@@ -1,6 +1,5 @@
-// NOTE this file should contain only sass resources.
-// Nothing that renders to CSS should live in this file.
-// https://github.com/shakacode/sass-resources-loader
+$nice-font: 'Noto Sans JP', Helvetica, sans-serif;
+$prose-line-height: 1.75em;
 
 $lightgray: #777777;
 $blue: #A285FF;
