--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -1,6 +1,7 @@
 body {
-  font-family: helvetica;
+  font-family: Helvetica, sans-serif;
   font-size: 1em;
+  font-weight: 400;
 }
 
 a {
@@ -28,6 +29,8 @@ a {
 
 .prose {
   max-width: 480px;
+  font-family: $nice-font;
+  line-height: $prose-line-height;
   a {
     font-weight: bold;
     color: $blue;
@@ -37,7 +40,6 @@ a {
   }
 
   p {
-    line-height: 1.75;
     margin-bottom: 2em;
     &:last-child {
       margin-bottom: 0;
@@ -57,6 +59,7 @@ a {
 .main-title {
   @include title;
   line-height: 1.4em;
+  padding: 0 0.135em;
 }
 
 .section {
@@ -135,4 +138,8 @@ a {
 p.inline-wrap {
   padding: 0.1em 0;
   line-height: 1.4em;
+}
+
+.image {
+  width: 100%;
 }
