--- a/app/sass/base.scss
+++ b/app/sass/base.scss
@@ -27,9 +27,9 @@ a {
   }
 }
 
-.wmax480 {
-  max-width: 480px;
-}
+.wmax480 { max-width: 480px; }
+.wmax600 { max-width: 600px; }
+.wmax960 { max-width: 960px; }
 
 .prose {
   font-family: $nice-font;
@@ -143,6 +143,16 @@ p.inline-wrap {
   line-height: 1.4em;
 }
 
-.image {
+.img {
   width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
+figcaption {
+  font-family: $nice-font;
+  font-style: italic;
+  color: #666;
 }
