--- a/app/sass/resume.scss
+++ b/app/sass/resume.scss
@@ -1,27 +1,27 @@
 .section-resume {
   margin-left: 0;
   padding-left: 0;
-  position: relative;
+
   .section-title {
     margin-bottom: 0.5em;
-    position: static;
   }
+
   @include medium-up {
-    $section-width: 95px;
-    margin-left: $section-width;
-    padding-left: 2em;
+    display: flex;
+    align-items: flex-start;
+
     .section-title {
-      left: -$section-width;
-      margin-bottom: 0;
-      position: absolute;
       text-align: right;
-      width: $section-width;
+      margin-right: 1em;
+      width: 133px;
+      flex-shrink: 0;
     }
   }
 }
 
 .resume-detail {
   @include small-text;
+
   em {
     color: $lightgray;
   }
